# lifap

./: .gitignore  BossEnum.h  CMakeLists.txt  Save.cpp  Save.h  SaveManager.cpp  SaveManager.h  main.cpp  suppress.txt
project/.cache/buildrecords/Desktop/: Master.br
project/.user/Metadata/: Workspace.user.xml
project/Metadata/Event/: {880544d1-277b-4dfd-95b1-16ce560a64d6}.xml
